AG-8939 fix titles paddings
Merge in EXTENSIONS/browser-extension from fix/AG-8939 to feature/AG-2737

Squashed commit of the following:

commit 1e63673186158d307fd9421598e5221103eb3d7e
Merge: ffe174d35 cf00f9912
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Jul 14 11:33:50 2021 +0300

    merge 2737

commit ffe174d35d7aa04f79ce71cb73da5d116a19fd52
Merge: f023b56a2 49ec006bc
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Jul 13 16:59:04 2021 +0300

    Merge branch 'feature/AG-2737' into fix/AG-8939

commit f023b56a20baada5f754687d0620f957ff741e89
Merge: d8d690fdf fec388921
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jul 12 19:04:48 2021 +0300

    Merge branch 'feature/AG-2737' into fix/AG-8939

commit d8d690fdf732417d31ed5659d36294d8cfdb33c2
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jul 12 17:02:07 2021 +0300

    fix titles paddings

--- a/Extension/src/pages/options/styles/common.pcss
+++ b/Extension/src/pages/options/styles/common.pcss
@@ -138,18 +138,30 @@ label.checkbox-label {
         color: var(--gray300)
     }
 
+    &__inner {
+        padding-top: 16px;
+    }
+
     &__container {
         position: relative;
         display: flex;
         justify-content: space-between;
-        padding: 32px 16px 24px;
+        padding: 32px 16px 16px;
+
+        &--sub > .title__inner {
+            padding-top: 0;
+        }
     }
 
     @media (min-width: 640px) {
         padding-right: 16px;
 
         &__container {
-            padding: 0 0 24px 16px;
+            padding: 0 0 16px 16px;
+
+            &--sub > .title__inner {
+                padding-top: 0;
+            }
         }
     }
 
@@ -191,7 +203,7 @@ label.checkbox-label {
 }
 
 .settings__group {
-    margin-bottom: 32px;
+    margin-bottom: 24px;
 
     &--disabled {
         opacity: 0.5;
